--- a/src/app/modules/settings/settings.component.scss
+++ b/src/app/modules/settings/settings.component.scss
@@ -69,17 +69,16 @@ $border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.05);
   display: flex;
   flex-direction: column;
-  overflow: auto;
 
   .router {
     flex-grow: 1;
+    overflow: auto;
   }
 }
 
 .actions {
   display: flex;
-  padding-bottom: 10px;
-  padding-right: 10px;
+  padding: 10px;
 
   button {
     margin: 0 5px;
